@@ -2,8 +2,11 @@
 use strict;
 use FindBin;
 
-use Test::More tests => 16;
-use_ok('WWW::Mechanize');
+use Test::More tests => 18;
+use_ok( 'WWW::Mechanize' );
+
+my $agent = WWW::Mechanize->new();
+isa_ok( $agent, "WWW::Mechanize" );
 
 SKIP: {
     eval { require HTTP::Daemon; };
@@ -19,7 +22,6 @@ SKIP: {
     my $url = <SERVER>;
     chomp $url;
 
-    my $agent = WWW::Mechanize->new();
     $agent->get( $url );
     is($agent->status, 200, "Got first page") or diag $agent->res->message;
     is($agent->content, "Referer: ''", "First page gets sent with empty referrer");
@@ -48,6 +50,13 @@ SKIP: {
     is($agent->content, "Referer: '$ref'", "Custom referer can be set");
     is( ref $agent->uri, "", "URI shouldn't be an object #5" );
 };
+
+SKIP: {
+    eval { use Test::Memory::Cycle };
+    skip "Test::Memory::Cycle not installed", 1 if $@;
+
+    memory_cycle_ok( $agent, "No memory cycles found" );
+}
 
 END {
     close SERVER;
